<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="486dp"
        android:layout_height="794dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/to" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/bauh93"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/tolo"
            android:textColor="@color/white"
            android:textSize="100sp"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tolo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/homesignbtn"
            android:elevation="20dp"
            android:gravity="center"
            android:includeFontPadding="true"
            android:paddingBottom="5dp"
            android:text="@string/signin"
            android:textColor="@color/teal"
            android:textSize="20sp"
            tools:targetApi="lollipop" />
    </RelativeLayout>

    <TextView
        android:id="@+id/dontacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="80dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/signupbtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#0000"
        android:text="@string/signup"
        android:textColor="@color/lblue"
        android:textStyle="bold"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dontacc"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>