<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Signinbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextbtn"
        app:srcCompat="@drawable/signline"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/signuphead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="565dp"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/teal"
        android:textColorLink="#4AA694"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/signuphead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/username"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="208dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="267dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="354dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="true"
        android:text="@string/i_agree_to_the_terms_and_conditons"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/nextbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/signbtn"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="4dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/lblut_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/or"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:layout_marginStart="183dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center|center_horizontal"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/gsignupbutton"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/signbtn"
        android:drawableLeft="@drawable/googleicon"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="4dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/lblut_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <TextView
        android:id="@+id/dontacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="27dp"
        android:text="@string/already_have_an_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gsigninbutton" />

    <Button
        android:id="@+id/signupbtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#0000"
        android:text="@string/signin"
        android:textColor="@color/lblue"
        android:textStyle="bold"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dontacc"
        app:layout_constraintTop_toBottomOf="@+id/gsigninbutton"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>