<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Signinbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinbtn"
        app:srcCompat="@drawable/signline" />

    <TextView
        android:id="@+id/signuphead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="262dp"
        android:layout_marginRight="262dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@color/teal"
        android:textColorLink="#4AA694"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="32dp"
        android:background="#0000"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/signuphead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/username"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuphead" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints=""
        android:background="@drawable/round_input"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="188dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="true"
        android:text="@string/remember_me"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/signbtn"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="4dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/lblut_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/or"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center|center_horizontal"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/gsigninbutton"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/signbtn"
        android:drawableLeft="@drawable/googleicon"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="4dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/lblut_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <TextView
        android:id="@+id/dontacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="27dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupbtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupbtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#0000"
        android:text="@string/signup"
        android:textColor="@color/lblue"
        android:textStyle="bold"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dontacc"
        app:layout_constraintTop_toBottomOf="@+id/gsigninbutton"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>